# material-color-utilities-rs

./: Cargo.toml  README.md
src/: lib.rs
src/blend/: blend.rs  mod.rs
src/contrast/: contrast.rs  mod.rs
src/dislike/: dislike_analyzer.rs  mod.rs
src/dynamiccolor/: dynamic_color.rs  dynamic_scheme.rs  material_dynamic_colors.rs  mod.rs  variant.rs
src/dynamiccolor/src/: contrast_curve.rs  mod.rs  tone_delta_pair.rs
src/hct/: cam16.rs  hct.rs  mod.rs  viewing_conditions.rs
src/hct/src/: hct_solver.rs  mod.rs
src/palettes/: core_palette.rs  mod.rs  tonal_palette.rs
src/quantize/: mod.rs  quantizer.rs  quantizer_celebi.rs  quantizer_map.rs  quantizer_wsmeans.rs  quantizer_wu.rs
src/quantize/src/: mod.rs  point_provider.rs  point_provider_lab.rs
src/scheme/: mod.rs  scheme.rs  scheme_content.rs  scheme_expressive.rs  scheme_fidelity.rs  scheme_fruit_salad.rs  scheme_monochrome.rs  scheme_neutral.rs  scheme_rainbow.rs  scheme_tonal_spot.rs  scheme_vibrant.rs
src/score/: score.rs
src/temperature/: mod.rs  temperature_cache.rs
src/tests/: blend_test.rs  color_utils_tests.rs  contrast_test.rs  dislike_analyzer_test.rs  dynamic_color_test.rs  dynamic_scheme_test.rs  hct_round_trip_test.rs  hct_test.rs  math_utils_test.rs  mod.rs  palettes_test.rs  quantizer_celebi_test.rs  quantizer_wsmeans_test.rs  quantizer_wu_test.rs  scheme_correctness_test.rs  scheme_monochrome_test.rs  score_test.rs  temperature_cache_test.rs
src/utils/: color_utils.rs  math_utils.rs  mod.rs  string_utils.rs
