[package]
name = "material-color-utilities-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
